2014-09-21  Saam Barati  <saambarati1@gmail.com>

        Web Inspector: fix TypeSet hierarchy in TypeTokenView
        https://bugs.webkit.org/show_bug.cgi?id=136982

        Reviewed by Joseph Pecoraro.

        The protocol object representation of TypeSet was being computed 
        incorrectly in JSC::TypeSet. This patch fixes that problem
        and also asserts that the type information that the Web Inspector
        receives is not empty.

        * UserInterface/Models/TypeSet.js:
        (WebInspector.TypeSet):
        * UserInterface/Views/TypeTokenView.js:
        (WebInspector.TypeTokenView.prototype._displayTypeName):

2014-10-21  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Test TestWebKitAPI/WebKit2Gtk/TestInspectorServer fails
        https://bugs.webkit.org/show_bug.cgi?id=132044

        Reviewed by Brian Burg.

        Make sure Protocol/InspectorFrontendHostStub.js is loaded before
        Base/Platform.js, because Platform uses the InspectorFrontendHost
        object.

        * UserInterface/Main.html:

2014-09-26  Saam Barati  <saambarati1@gmail.com>

        Web Inspector: Type Token View shows type information on hover when it shouldn't
        https://bugs.webkit.org/show_bug.cgi?id=137152

        Reviewed by Brian J. Burg.

        TypeTokenView should only show type information when there is 
        more than one primitive type or more than zero objects types. 
        This fixes a bug in checking the length of object types.

        * UserInterface/Views/TypeTokenView.js:
        (WebInspector.TypeTokenView.prototype._shouldShowPopover):

2014-09-25  Saam Barati  <saambarati1@gmail.com>

        Web Inspector: console.assert(bitString) TypeSet:50 
        https://bugs.webkit.org/show_bug.cgi?id=137051

        Reviewed by Joseph Pecoraro.

        This fixes TypeSet's isContainedIn method by ensuring that 
        the type bit string isn't zero because the test would trivially 
        pass if the bit string is zero.
