@@ -1,3 +1,14 @@
+2014-09-20  Joseph Pecoraro  <pecoraro@apple.com>
+
+        Web Inspector: Option+Click on CSS url(...) should jump to resource view
+        https://bugs.webkit.org/show_bug.cgi?id=136965
+
+        Reviewed by Timothy Hatcher.
+
+        * UserInterface/Views/CodeMirrorAdditions.js:
+        When parsing CSS url(...) tokens, the contents of url(...)
+        are a "string" type, not "atom".
+
 2014-09-21  Saam Barati  <saambarati1@gmail.com>
 
         Web Inspector: fix TypeSet hierarchy in TypeTokenView
